@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2025 the original author or authors.
+ * Copyright 2012-2026 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@ package org.assertj.core.api;
 
 import static java.lang.String.format;
 import static java.time.ZoneOffset.UTC;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.fail;
 import static org.assertj.core.data.MapEntry.entry;
@@ -41,11 +40,12 @@ import java.util.Optional;
 import java.util.OptionalDouble;
 import java.util.OptionalInt;
 import java.util.OptionalLong;
+
+import org.assertj.core.error.MultipleAssertionsError;
 import org.assertj.core.internal.ChronoLocalDateTimeComparator;
 import org.assertj.core.internal.ChronoZonedDateTimeByInstantComparator;
 import org.assertj.core.internal.OffsetDateTimeByInstantComparator;
 import org.junit.jupiter.api.Test;
-import org.opentest4j.MultipleFailuresError;
 
 class AutoCloseableSoftAssertionsTest {
 
@@ -161,8 +161,8 @@ class AutoCloseableSoftAssertionsTest {
             .isEqualTo(OffsetTime.of(13, 0, 0, 0, ZoneOffset.UTC));
       softly.assertThat(OffsetDateTime.MIN).isEqualTo(OffsetDateTime.MAX);
 
-    } catch (MultipleFailuresError e) {
-      List<String> errors = e.getFailures().stream().map(Object::toString).collect(toList());
+    } catch (MultipleAssertionsError e) {
+      List<String> errors = e.getErrors().stream().map(Object::toString).toList();
       assertThat(errors).hasSize(49);
 
       assertThat(errors.get(0)).contains(shouldBeEqualMessage("0", "1").formatted());
